converted div to p to  address spacing issues for pencil marks

--- a/src/PencilMark.css
+++ b/src/PencilMark.css
@@ -1,4 +1,5 @@
 .pencil-mark{
+  display: inline-block;
 	color:grey;
 }
 
@@ -8,27 +9,16 @@
 
 @media (orientation: landscape){
 	.pencil-mark{
-    padding: .2vh;
+    margin: 0 .2vh;
     width: 2vh;
     height: 2vh;
 	}
-  .pencil-mark h6{
-    font-size: 2vh;
-    margin:0;
-    padding:0;
-  }
 }
 
 @media (orientation: portrait){
 	.pencil-mark{
-    padding: .2vw;
-    margin: 0;
+    padding: 0 .2vw;
     width: 2vw;
     height: 2vw;
 	}
-  .pencil-mark h6{
-    font-size: 2vw;
-    margin:0;
-    padding:0;
-  }
 }
